@@ -22,6 +22,8 @@ debsig-verify (0.11) UNRELEASED; urgency=low
     - Switch from xmalloc to m_malloc().
     - Use ohshit()/ohshite() instead of ds_fail_printf(DS_FAIL_INTERNAL, ...).
   * Remove useless return statements.
+  * Use a temporary GNUPGHOME instead of using the users's default.
+    Based on a patch by Michael Vogt <mvo@ubuntu.com>. Closes: #758826
 
  -- Guillem Jover <guillem@debian.org>  Tue, 19 Aug 2014 10:39:31 +0200
 
